--- a/index.html
+++ b/index.html
@@ -91,8 +91,11 @@
        </div>
 
        <div class="story__content">
-           Story Content
-       </div>
+           <h3 class="heading-3 mb-small">Happy Customers</h3>
+           <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The Best Decision Of Our Lives&rdquo;</h2>
+           <p class="story__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus. Quidem consequatur harum volupta!</p>
+           <button class="btn">Find Your Own Home</button>
+        </div>
 
       <section class="homes">
           Homes
