Story section complete

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
           
        </section>
        <div class="story__pictures">
-            Story Pictures
+            <img src="img/story-1.jpeg" alt="Couple With New House" class="story__img--1">
+            <img src="img/story-2.jpeg" alt="New House" class="story__img--2">
        </div>
 
        <div class="story__content">
