--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body class="container">
        <div class="sidebar">
-           Sidebar
+           <button class="nav-btn"></button>
        </div>
 
        <header class="header">
@@ -359,7 +359,17 @@
       </section>
 
       <footer class="footer">
-          Footer
+          <ul class="nav">
+              <li class="nav__item"><a href="#" class="nav__link">Find Your Dream Home</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">Request Proposal</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">Download Home Planner</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">Contact Us</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">Submit Your Property</a></li>
+              <li class="nav__item"><a href="#" class="nav__link">Come Work With Us!</a></li>
+          </ul>
+          <p class="copyright">
+              &copy; Copyright 2017 by Jonas Schmedtmann. Feel free to use this project for your own purposes. This does NOT apply if you plan to produce your own course or tutorials based on this project. 
+          </p>
       </footer>
     </body>
 </html>
