--- a/index.html
+++ b/index.html
@@ -17,11 +17,40 @@
        </div>
 
        <header class="header">
-           Header
+            <img src="img/logo.png" alt="Nexter Logo" class="header__logo">
+            <h3 class="heading-3">Your Own Home:</h3>
+            <h1 class="heading-1">The Ultimate Personal Freedom</h1>
+            <button class="btn header__btn">View Our Properties</button>
+            <div class="header__seenon-text">Seen On</div>
+            <div class="header__seenon-logos">
+                <img src="img/logo-bbc.png" alt="See on Logo 1">
+                <img src="img/logo-forbes.png" alt="See on Logo 2">
+                <img src="img/logo-techcrunch.png" alt="See on Logo 3">
+                <img src="img/logo-bi.png" alt="See on Logo 4">
+            </div>
        </header>
 
        <div class="realtors">
-           Top 3 Realtors
+           <h3 class="heading-3">Top 3 Realtors</h3>
+           <div class="realtors__list">
+               <img src="img/realtor-1.jpeg" alt="Realtor 1" class="realtors__img">
+               <div class="realtors__details">
+                   <h4 class="heading-4 heading-4--light">Erik Feinman</h4>
+                   <p class="realtors__sold">245 Houses Sold</p>
+               </div>
+
+               <img src="img/realtor-2.jpeg" alt="Realtor 2" class="realtors__img">
+               <div class="realtors__details">
+                   <h4 class="heading-4 heading-4--light">Kim Brown</h4>
+                   <p class="realtors__sold">212 Houses Sold</p>
+               </div>
+
+               <img src="img/realtor-3.jpeg" alt="Realtor 3" class="realtors__img">
+               <div class="realtors__details">
+                   <h4 class="heading-4 heading-4--light">Toby Ramsey</h4>
+                   <p class="realtors__sold">198 Houses Sold</p>
+               </div>
+           </div>
        </div>
 
        <section class="features">
